@@ -3,7 +3,6 @@ package com.starfall.util;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.ListOperations;
-import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.core.ValueOperations;
 import org.springframework.scheduling.annotation.Async;
@@ -12,6 +11,7 @@ import org.springframework.stereotype.Component;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -19,48 +19,30 @@ import java.util.stream.Collectors;
 @Slf4j
 public class RedisUtil {
     @Autowired
-    RedisTemplate redisTemplate;
-    @Autowired
     StringRedisTemplate stringRedisTemplate;
-
 
     @Async
     public void set(String key, Object value){
-        set(key, value, 10 , TimeUnit.MINUTES, false);
-    }
-
-    @Async
-    public void set(String key, Object value,boolean originalObj){
         var hasKey = hasKey(key);
         long ttl = 0;
         if(hasKey){
             ttl = getExpire(key);
         }
         if(ttl > 0){
-            set(key, value, ttl, TimeUnit.MILLISECONDS, originalObj);
+            set(key, value, ttl, TimeUnit.MILLISECONDS);
         }
         else{
-            set(key, value, 10 , TimeUnit.MINUTES, originalObj);
+            set(key, value, 10 , TimeUnit.MINUTES);
         }
     }
 
     @Async
     public void set(String key, Object value, long time){
-        set(key, value, time, TimeUnit.SECONDS, false);
+        set(key, value, time, TimeUnit.SECONDS);
     }
 
     @Async
-    public void set(String key, Object value, long time,boolean originalObj){
-        set(key, value, time, TimeUnit.SECONDS, originalObj);
-    }
-
-    @Async
-    public void set(String key, Object value, long time, TimeUnit timeUnit) {
-        set(key, value, time, timeUnit, false);
-    }
-
-    @Async
-    public void set(String key, Object value, long time, TimeUnit timeUnit,boolean originalObj){
+    public void set(String key, Object value, long time, TimeUnit timeUnit){
 //        log.info("【设置缓存】key: {}, value: {}, time: {}, timeUnit: {}, originalObj: {}", key, value, time, timeUnit, originalObj);
         Random random = new Random();
         if(timeUnit == TimeUnit.MILLISECONDS){
@@ -85,21 +67,24 @@ public class RedisUtil {
             }
             time += random.nextInt(10000);
         }
-        if(originalObj){
-            ValueOperations<String,Object> operations = redisTemplate.opsForValue();
-            operations.set(key,value,time,TimeUnit.MILLISECONDS);
-        }
-        else{
-            ValueOperations<String,String> operations = stringRedisTemplate.opsForValue();
-            operations.set(key,JsonOperate.toJson(value),time,TimeUnit.MILLISECONDS);
-        }
+        ValueOperations<String,String> operations = stringRedisTemplate.opsForValue();
+        operations.set(key,JsonOperate.toJson(value),time,TimeUnit.MILLISECONDS);
     }
 
 
+    public boolean hasKey(String... key){
+//        log.info("【检查key是否存在】{} : {}",key,r);
+        boolean r = Boolean.TRUE.equals(stringRedisTemplate.hasKey(joinKey(key)));
+        return r;
+    }
+
     public boolean hasKey(String key){
         boolean r = Boolean.TRUE.equals(stringRedisTemplate.hasKey(key));
-//        log.info("【检查key是否存在】{} : {}",key,r);
         return r;
+    }
+
+    public  <T> T get(Class<T> valueType,String... keyParam){
+        return get(joinKey(keyParam), valueType);
     }
 
     public <T> T get(String key, Class<T> valueType){
@@ -110,12 +95,16 @@ public class RedisUtil {
         return null;
     }
 
-    public <T> T get(String key){
+    public <T> List<T> getList(Class<T> valueType, String... keyParam){
+        return getList(joinKey(keyParam), valueType);
+    }
+
+    public <T> List<T> getList(String key, Class<T> valueType){
         if(hasKey(key)){
-            ValueOperations<String,Object> operations = redisTemplate.opsForValue();
-            return (T) operations.get(key);
+            ValueOperations<String,String> operations = stringRedisTemplate.opsForValue();
+            return JsonOperate.toList(operations.get(key), valueType);
         }
-        return null;
+        return List.of();
     }
 
     public void delete(String key){
@@ -124,9 +113,34 @@ public class RedisUtil {
         }
     }
 
+    public void delete(String... keyParam){
+        if(hasKey(keyParam)){
+            stringRedisTemplate.delete(joinKey(keyParam));
+        }
+    }
+
+    @Async
+    public void deleteAsync(String key){
+        if(hasKey(key)){
+            stringRedisTemplate.delete(key);
+        }
+    }
+
+    @Async
+    public void deleteAsync(String... keyParam){
+        if(hasKey(keyParam)){
+            stringRedisTemplate.delete(joinKey(keyParam));
+        }
+    }
+
     public void deleteBatch(String... keys){
-        for (String key : keys){
-            delete(key);
+        stringRedisTemplate.delete(Arrays.stream(keys).toList());
+    }
+
+    public void deleteBatch(String formatKey){
+        Set<String> keys = stringRedisTemplate.keys(formatKey);
+        if (keys != null) {
+            stringRedisTemplate.delete(keys);
         }
     }
 
@@ -135,30 +149,70 @@ public class RedisUtil {
     }
 
     public Long getExpire(String key, TimeUnit timeUnit){
-        return redisTemplate.getExpire(key, timeUnit);
+        return stringRedisTemplate.getExpire(key, timeUnit);
     }
 
-    public ValueOperations opsForValue(){
-        return redisTemplate.opsForValue();
+    public ValueOperations<String,String> opsForValue(){
+        return stringRedisTemplate.opsForValue();
     }
 
-    public ListOperations opsForList(){
-        return redisTemplate.opsForList();
+    public ListOperations<String,String>  opsForList(){
+        return stringRedisTemplate.opsForList();
+    }
+
+    public void increment(String... keyParam){
+        opsForValue().increment(joinKey(keyParam));
+    }
+
+    public void increment(long delta, String... keyParam){
+        opsForValue().increment(joinKey(keyParam), delta);
+    }
+
+    public void decrement(String... keyParam){
+        opsForValue().decrement(joinKey(keyParam));
+    }
+
+    public void decrement(long delta, String... keyParam){
+        opsForValue().decrement(joinKey(keyParam), delta);
+    }
+
+    public void incOrDec(boolean increment, String... keyParam){
+        if(increment){
+            increment(keyParam);
+        }
+        else{
+            decrement(keyParam);
+        }
+    }
+
+    public void incOrDec(long delta, String... keyParam){
+        if(delta > 0){
+            increment(delta, keyParam);
+        }
+        else if(delta < 0){
+            decrement(-delta, keyParam);
+        }
     }
 
     public <T> List<T> paginateByPageNum(List<T> array, int pageNum, int pageSize) {
         return paginateByIndex(array, (pageNum - 1) * pageSize, pageSize);
     }
+
     public <T> List<T> paginateByIndex(List<T> array, int index, int pageSize) {
         if (array == null || array.size() == 0) {
-            return Arrays.asList();
+            return List.of();
         }
         if (index >= array.size()) {
-            return Arrays.asList();
+            return List.of();
         }
         return array.stream()
                 .skip(index)
                 .limit(pageSize)
                 .collect(Collectors.toList());
+    }
+
+//    自动拼接带有包的key
+    public String joinKey(String... keyParams){
+        return String.join(":", keyParams);
     }
 }
